--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabareesh MB - AI Engineer</title>
+    <title>Sabareesh M B - AI Engineer</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Inter Font from Google Fonts -->
+    <!-- Inter & Poppins Fonts from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -20,6 +20,27 @@
             color: #333333;
             text-rendering: optimizeLegibility;
             -webkit-font-smoothing: antialiased;
+            background: radial-gradient(circle at 10% 20%, rgb(255, 255, 255) 0%, rgb(255, 240, 248) 50%, rgb(240, 255, 255) 100%);
+        }
+
+        /* Poppins font for headings */
+        h1, h2, h3 {
+            font-family: 'Poppins', sans-serif;
+        }
+
+        /* Glow effect for main title */
+        .glow-text {
+            text-shadow: 0 0 5px rgba(0, 184, 148, 0.4), 0 0 10px rgba(0, 184, 148, 0.3);
+        }
+
+        /* Pulsating glow for the profile picture */
+        @keyframes profile-glow {
+            0% { box-shadow: 0 0 0 0px rgba(0, 184, 148, 0.4); }
+            50% { box-shadow: 0 0 0 10px rgba(0, 184, 148, 0); }
+            100% { box-shadow: 0 0 0 0px rgba(0, 184, 148, 0.4); }
+        }
+        .profile-image-glow {
+            animation: profile-glow 2s infinite ease-in-out;
         }
 
         /* Styling for section titles with a vibrant underline */
@@ -75,11 +96,12 @@
             padding: 0.75rem 2rem;
             border-radius: 9999px;
             box-shadow: 0 4px 6px rgba(0, 184, 148, 0.2);
-            transition: background-color 0.3s ease, transform 0.2s ease;
+            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
         }
         .btn-primary:hover {
             background-color: #00a082;
             transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(0, 184, 148, 0.4);
         }
 
         .btn-secondary {
@@ -88,12 +110,24 @@
             font-weight: 700;
             padding: 0.75rem 2rem;
             border-radius: 9999px;
-            transition: border-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+            transition: border-color 0.3s ease, color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
         }
         .btn-secondary:hover {
             border-color: #00b894;
             color: #00b894;
             transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(0, 184, 148, 0.2);
+        }
+
+        /* Fade-in animation for sections */
+        .fade-in-up {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+        }
+        .fade-in-up.is-visible {
+            opacity: 1;
+            transform: translateY(0);
         }
     </style>
 </head>
@@ -102,7 +136,7 @@
     <!-- Header & Navigation -->
     <header class="sticky top-0 z-50 bg-white bg-opacity-90 backdrop-blur-sm shadow-lg py-4 px-4 md:px-8">
         <nav class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-extrabold text-teal-500">Sabareesh MB</a>
+            <a href="#" class="text-2xl font-extrabold text-teal-500 font-poppins">Sabareesh M B</a>
             <div class="hidden md:flex space-x-6">
                 <a href="#about" class="hover:text-teal-500 font-medium transition-colors duration-300">About</a>
                 <a href="#skills" class="hover:text-teal-500 font-medium transition-colors duration-300">Skills</a>
@@ -131,15 +165,15 @@
         </div>
     </header>
 
-    <main class="container mx-auto p-4 md:p-8 space-y-16 md:space-y-20">
+    <main class="container mx-auto px-4 md:px-8 space-y-16 md:space-y-20">
 
         <!-- Hero Section -->
-        <section id="hero" class="relative overflow-hidden h-screen flex items-center justify-center text-center">
+        <section id="hero" class="relative overflow-hidden min-h-[80vh] flex items-center justify-center text-center py-16">
             <div class="flex flex-col items-center">
                 <div class="flex justify-center mb-6">
-                    <img src="https://placehold.co/150x150/00b894/ffffff?text=SB" alt="Sabareesh MB" class="rounded-full ring-4 ring-teal-500">
+                    <img src="https://raw.githubusercontent.com/yo-sabree/Portfolio/main/myimage.png" alt="Sabareesh M B" class="rounded-full ring-4 ring-teal-500 w-40 h-40 object-cover profile-image-glow">
                 </div>
-                <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 mb-2 leading-tight">Sabareesh MB</h1>
+                <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 mb-2 leading-tight glow-text">Sabareesh M B</h1>
                 <p class="text-xl md:text-2xl font-light text-gray-600 mb-4">AI Engineer & Data Scientist</p>
                 <p class="text-lg text-teal-500 font-semibold mb-6 animate-pulse">
                     Open to international relocation!
@@ -152,7 +186,7 @@
         </section>
 
         <!-- About Section -->
-        <section id="about" class="pt-16">
+        <section id="about" class="fade-in-up pt-16">
             <div class="max-w-4xl mx-auto card p-8 md:p-12 rounded-3xl">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6 text-center section-title mx-auto">About Me</h2>
                 <p class="text-lg md:text-xl text-gray-600 leading-relaxed text-justify max-w-3xl mx-auto">
@@ -162,7 +196,7 @@
         </section>
 
         <!-- Skills Section with Charts -->
-        <section id="skills">
+        <section id="skills" class="fade-in-up">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Skills & Expertise</h2>
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <!-- Skills Proficiency Chart -->
@@ -202,7 +236,7 @@
         </section>
         
         <!-- Professional Experience Section -->
-        <section id="experience" class="space-y-8">
+        <section id="experience" class="fade-in-up space-y-8">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Professional Experience</h2>
             <div class="grid gap-8">
                 <!-- Job 1 -->
@@ -241,7 +275,7 @@
         </section>
 
         <!-- Projects Section -->
-        <section id="projects" class="space-y-8">
+        <section id="projects" class="fade-in-up space-y-8">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Key Projects</h2>
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Project 1 -->
@@ -272,7 +306,7 @@
         </section>
         
         <!-- Education Section -->
-        <section id="education" class="pt-16">
+        <section id="education" class="fade-in-up pt-16">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Education</h2>
             <div class="max-w-4xl mx-auto card p-8 rounded-3xl">
                 <h3 class="text-2xl font-bold text-gray-900">Bachelor of Technology in AI and Data Science</h3>
@@ -282,7 +316,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="card p-8 md:p-12 rounded-3xl text-center">
+        <section id="contact" class="fade-in-up card p-8 md:p-12 rounded-3xl text-center">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6 section-title mx-auto">Get In Touch</h2>
             <p class="text-lg text-gray-600 mb-8 max-w-2xl mx-auto">
                 I am eager to discuss new opportunities. Feel free to connect with me!
@@ -316,7 +350,7 @@
 
     <!-- Footer -->
     <footer class="text-center py-6 text-gray-500">
-        <p>&copy; 2024 Sabareesh MB. All rights reserved.</p>
+        <p>&copy; 2024 Sabareesh M B. All rights reserved.</p>
     </footer>
 
     <script>
@@ -412,6 +446,27 @@
             });
         });
 
+        // Intersection Observer for scroll-reveal effect
+        const sections = document.querySelectorAll('section');
+
+        const observerOptions = {
+            root: null,
+            rootMargin: '0px',
+            threshold: 0.2 // Trigger when 20% of the section is visible
+        };
+
+        const observer = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('is-visible');
+                    observer.unobserve(entry.target);
+                }
+            });
+        }, observerOptions);
+
+        sections.forEach(section => {
+            observer.observe(section);
+        });
     </script>
 
 </body>
