--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sabareesh MB - AI Engineer</title>
+    <title>Sabareesh M B - AI Engineer</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Inter Font from Google Fonts -->
@@ -114,7 +114,7 @@
     <!-- Header & Navigation -->
     <header class="sticky top-0 z-50 bg-white bg-opacity-90 backdrop-blur-sm shadow-lg py-4 px-4 md:px-8">
         <nav class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-2xl font-extrabold text-teal-500">Sabareesh MB</a>
+            <a href="#" class="text-2xl font-extrabold text-teal-500">Sabareesh M B</a>
             <div class="hidden md:flex space-x-6">
                 <a href="#about" class="hover:text-teal-500 font-medium transition-colors duration-300">About</a>
                 <a href="#skills" class="hover:text-teal-500 font-medium transition-colors duration-300">Skills</a>
@@ -143,16 +143,17 @@
         </div>
     </header>
 
-    <main class="container mx-auto px-4 md:px-8 space-y-16 md:space-y-20">
+    <!-- Main Content -->
+    <main class="container mx-auto px-4 md:px-8 space-y-12 md:space-y-16">
 
         <!-- Hero Section -->
-        <section id="hero" class="relative overflow-hidden min-h-[80vh] flex items-center justify-center text-center py-16">
+        <section id="hero" class="relative overflow-hidden min-h-[60vh] md:min-h-[70vh] flex items-center justify-center text-center py-12 md:py-16">
             <div class="flex flex-col items-center">
                 <div class="flex justify-center mb-6">
-                    <img src="https://raw.githubusercontent.com/yo-sabree/Portfolio/main/myimage.png" alt="Sabareesh MB" class="rounded-full ring-4 ring-teal-500 w-40 h-40 object-cover">
+                    <img src="https://raw.githubusercontent.com/yo-sabree/Portfolio/main/myimage.png" alt="Sabareesh M B" class="rounded-full ring-4 ring-teal-500 w-48 h-48 md:w-64 md:h-64 object-cover">
                 </div>
-                <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 mb-2 leading-tight">Sabareesh MB</h1>
-                <p class="text-xl md:text-2xl font-light text-gray-600 mb-4">AI Engineer & Data Scientist</p>
+                <h1 class="text-5xl md:text-7xl font-extrabold text-gray-900 mb-2 leading-tight">Sabareesh M B</h1>
+                <p class="text-xl md:text-3xl font-light text-gray-600 mb-4">AI Engineer & Data Scientist</p>
                 <p class="text-lg text-teal-500 font-semibold mb-6 animate-pulse">
                     Open to international relocation!
                 </p>
@@ -164,7 +165,7 @@
         </section>
 
         <!-- About Section -->
-        <section id="about" class="fade-in-up pt-16">
+        <section id="about" class="fade-in-up pt-12">
             <div class="max-w-4xl mx-auto card p-8 md:p-12 rounded-3xl">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6 text-center section-title mx-auto">About Me</h2>
                 <p class="text-lg md:text-xl text-gray-600 leading-relaxed text-justify max-w-3xl mx-auto">
@@ -174,9 +175,9 @@
         </section>
 
         <!-- Skills Section with Charts -->
-        <section id="skills" class="fade-in-up">
+        <section id="skills" class="fade-in-up pt-12">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Skills & Expertise</h2>
-            <div class="grid lg:grid-cols-2 gap-12 items-center">
+            <div class="grid lg:grid-cols-2 gap-8 items-center">
                 <!-- Skills Proficiency Chart -->
                 <div class="card p-6 md:p-8 rounded-3xl">
                     <h3 class="text-xl md:text-2xl font-semibold mb-4 text-center text-gray-900">Skill Proficiency Radar</h3>
@@ -214,7 +215,7 @@
         </section>
         
         <!-- Professional Experience Section -->
-        <section id="experience" class="fade-in-up space-y-8">
+        <section id="experience" class="fade-in-up pt-12 space-y-8">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Professional Experience</h2>
             <div class="grid gap-8">
                 <!-- Job 1 -->
@@ -253,7 +254,7 @@
         </section>
 
         <!-- Projects Section -->
-        <section id="projects" class="fade-in-up space-y-8">
+        <section id="projects" class="fade-in-up pt-12 space-y-8">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Key Projects</h2>
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Project 1 -->
@@ -284,7 +285,7 @@
         </section>
         
         <!-- Education Section -->
-        <section id="education" class="fade-in-up pt-16">
+        <section id="education" class="fade-in-up pt-12">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-12 text-center section-title mx-auto">Education</h2>
             <div class="max-w-4xl mx-auto card p-8 rounded-3xl">
                 <h3 class="text-2xl font-bold text-gray-900">Bachelor of Technology in AI and Data Science</h3>
@@ -294,7 +295,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="fade-in-up card p-8 md:p-12 rounded-3xl text-center">
+        <section id="contact" class="fade-in-up card p-8 md:p-12 rounded-3xl text-center pt-12">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6 section-title mx-auto">Get In Touch</h2>
             <p class="text-lg text-gray-600 mb-8 max-w-2xl mx-auto">
                 I am eager to discuss new opportunities. Feel free to connect with me!
@@ -328,7 +329,7 @@
 
     <!-- Footer -->
     <footer class="text-center py-6 text-gray-500">
-        <p>&copy; 2024 Sabareesh MB. All rights reserved.</p>
+        <p>&copy; 2024 Sabareesh M B. All rights reserved.</p>
     </footer>
 
     <script>
