--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
         <!-- SLIDE 1: HERO -->
         <section class="slide">
             <h1 class="glitch" data-text="SABAREESH M B">SABAREESH M B</h1>
-            <p class="subtitle">AI DEVELOPER | VOICE AI SPECIALIST | AGENTIC SYSTEMS ARCHITECT</p>
+            <p class="subtitle">Gen AI Engineer</p>
             <div class="contact-grid">
                 <a href="tel:+918489814275" class="contact-item">
                     <div style="font-size: 2rem; margin-bottom: 10px;">📞</div>
